add intro paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is a HTML Level 1 Heading</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, cupiditate? Cum eos distinctio ipsam, eius quasi aliquam voluptas vitae accusamus voluptatum perspiciatis animi sit nobis! Laudantium velit quaerat illo aliquid!</p>
 </body>
 </html>
