--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Web Page</title>
+    <title>My First Page</title>
 </head>
 <body>
-    <h1>This is a HTML Level 1 Heading</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, cupiditate? Cum eos distinctio ipsam, eius quasi aliquam voluptas vitae accusamus voluptatum perspiciatis animi sit nobis! Laudantium velit quaerat illo aliquid!</p>
+    <p>Hello, World!</p>
+    <p>Welcome to my first web page!</p>
 </body>
 </html>
