--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <p>Hello, World!</p>
     <p>Welcome to my first web page!</p>
+    
+    <h1>My First web page</h1>
+    <h2>Written with a little guidance from Moringa School</h2>
 </body>
 </html>
