add paragraph with learning goals

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <title>My First Page</title>
 </head>
 <body>
+    <h1>My First web page</h1>
+    <h2>Written with a little guidance from Moringa School</h2>
+    
     <p>Hello, World!</p>
     <p>Welcome to my first web page!</p>
     
-    <h1>My First web page</h1>
-    <h2>Written with a little guidance from Moringa School</h2>
+    <p>Here are some things I'm going to learn:</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>And a lot more!</li>
+    </ul>
 </body>
 </html>
