--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Page</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="https://github.com/fluidicon.png" type="image/x-icon">
 </head>
 <body>
